--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
  <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <form action="">
+        <input type="text" name="" id="addPlayer1" placeholder="Joueur 1">
+        <input type="text" name="" id="addPlayer2" placeholder="Joueur 2">
+        <button id="addPlayerBtn">add</button>
+    </form>
+    <div id="playerTurn"></div>
     <div class="board" id="board">
            <div class="cell" data-cell></div>
            <div class="cell" data-cell></div>
